Added direct use of universal viewer.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <div id="top">
       <div class="container"> 
         <!--=== Skip links ===-->
-        <div id="skip"> <a href="#content" onClick="$('#content').focus()">Skip to content</a> </div>
+        <div id="skip"> <a href="#mycontent" onClick="$('#mycontent').focus()">Skip to content</a> </div>
         <!-- /Skip links --> 
       </div>
     </div>
@@ -80,7 +80,7 @@
     <!-- /mainmenu --> 
     
     <!-- main content -->
-    <div id="content" class="container" role="main" tabindex="0">
+    <div id="mycontent" class="container" role="main" tabindex="0">
 
 
       <h1 class="hide">Cardinal Theme</h1>
