--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,10 +47,16 @@
         <div class="navbar navbar-default"> 
           
           <!-- main navigation -->
+<!--
           <button type="button" class="navbar-toggle btn-navbar" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="menu-text">Menu</span></button>
+-->
+          <button type="button" class="navbar-toggle btn-navbar" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="menu-text">Menu</span></button>
           <!-- /nav-collapse -->
           
+<!--
           <div class="navbar-collapse collapse"> 
+-->
+          <div class="navbar-collapse"> 
             <!--search box-->
 <!--
             <div id="nav-search" role="search">
