Add image analysis report pages.

--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -9,6 +9,7 @@
                <li><a href="/midi-spec">MIDI specification</a></li>
                <li><a href="/duplicates">Duplicates</a></li>
                <li><a href="/stats">Statistics</a></li>
+               <li><a href="/image-analysis">Image analysis reports</a></li>
                <li><a href="/links">Links</a></li>
                <li><a href="/bib">Bibliography</a></li>
             </ul>
