--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -1,25 +1,28 @@
+
 <div  role="navigation">
-   <div id="primary-nav">
-      <ul class="highlight nav navbar-nav" aria-label="primary navigation">
-         <li id="nav-home"> <a href="/">Home</a></li>
-         <li id="nav-1">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-               <li><a href="/about">Overview</a></li>
-               <li><a href="/midi-spec">MIDI specification</a></li>
-               <li><a href="/duplicates">Duplicates</a></li>
-               <li><a href="/stats">Statistics</a></li>
-               <li><a href="/links">Links</a></li>
-               <li><a href="/bib">Bibliography</a></li>
-            </ul>
-         </li>
-         <li id="nav-2"> <a href="/performers">Performers</a> </li>
-         <li id="nav-3"> <a href="/composers">Composers</a> </li>
-         <li id="nav-4"> <a href="/random">Random</a> </li>
-         <li id="nav-5"> <a href="/sv">Sonic Visualiser</a> </li>
-         <li id="nav-6"> <a target="_blank" href="https://github.com/pianoroll/SUPRA">Github</a> </li>
-      </ul>
-   </div>
+	<div id="primary-nav">
+		<ul class="highlight nav navbar-nav" aria-label="primary navigation">
+			<li id="nav-home"> <a href="/">Home</a></li>
+			<li id="nav-1">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
+				<ul class="dropdown-menu">
+				   <li><a target="_blank" href="https://exhibits.stanford.edu/supra">Library website</a></li>
+				   <li><a target="_blank" href="https://exhibits.stanford.edu/supra/feature/piano-roll-scanner">Roll scanner</a></li>
+				   <li><a href="/about">Overview</a></li>
+				   <li><a href="/midi-spec">MIDI specification</a></li>
+				   <li><a href="/duplicates">Duplicates</a></li>
+				   <li><a href="/stats">Statistics</a></li>
+				   <li><a href="/links">Links</a></li>
+				   <li><a href="/bib">Bibliography</a></li>
+				</ul>
+			</li>
+			<li id="nav-2"> <a href="/performers">Performers</a> </li>
+			<li id="nav-3"> <a href="/composers">Composers</a> </li>
+			<li id="nav-4"> <a href="/random">Random</a> </li>
+			<li id="nav-5"> <a href="/sv">Sonic Visualiser</a> </li>
+			<li id="nav-6"> <a target="_blank" href="https://github.com/pianoroll/SUPRA">Github</a> </li>
+		</ul>
+	</div>
 </div>
 
 
