Add debug statement.

--- a/_includes/scripts/scripts-common.html
+++ b/_includes/scripts/scripts-common.html
@@ -198,6 +198,7 @@ function MakeRollTableRows(list, peeps) {
 			continue;
 		}
 		output += "<tr class='data'>";
+		console.log("PROCESSING list", i, ":", list[i]);
 
 		var druid = list[i].DRUID.trim();
 		output += "<td>";
