Fix missing parentheses.

--- a/_includes/scripts/scripts-common.html
+++ b/_includes/scripts/scripts-common.html
@@ -762,10 +762,10 @@ function SortByNumber(index, selector, reverse) {
 			return -1;
 		}
 
-		if (A.match(/\?\?\?/) {
+		if (A.match(/\?\?\?/)) {
 			return +1;
 		}
-		if (B.match(/\?\?\?/) {
+		if (B.match(/\?\?\?/)) {
 			return -1;
 		}
 
