--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -20,6 +20,7 @@
 			<li id="nav-3"> <a href="/composers">Composers</a> </li>
 			<li id="nav-4"> <a href="/random">Random</a> </li>
 			<li id="nav-5"> <a href="/sv">Sonic Visualiser</a> </li>
+			<li id="nav-5"> <a href="/download">Download</a> </li>
 			<li id="nav-6"> <a target="_blank" href="https://github.com/pianoroll/SUPRA">Github</a> </li>
 		</ul>
 	</div>
