Update download page; add library exhibit page to navigation bar.

--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -21,7 +21,7 @@
 			<li id="nav-4"> <a href="/random">Random</a> </li>
 			<li id="nav-5"> <a href="/sv">Sonic Visualiser</a> </li>
 			<li id="nav-5"> <a href="/download">Download</a> </li>
-			<li id="nav-6"> <a target="_blank" href="https://github.com/pianoroll/SUPRA">Github</a> </li>
+			<li id="nav-5"> <a target="_blank" href="https://exhibits.stanford.edu/supra">Exhibit</a> </li>
 		</ul>
 	</div>
 </div>
