Remove WAV links from homepage.

--- a/_includes/scripts/scripts-common.html
+++ b/_includes/scripts/scripts-common.html
@@ -296,10 +296,11 @@ function MakeRollTableRows(list, peeps) {
 		output += "</span>";
 		output += "</td>";
 
+/*
 		output += "<td>";
 		// http://ccrma.stanford.edu/~craig/piano-roll-project/supra/welte-red/mp3-exp/bc072xf6791.mp3
-		output += "<span class='mp3'>";
-		output += "<a title='Link to MP3 audio file' target='audio' href='";
+		output += "<span class='wav'>";
+		output += "<a title='Link to WAV audio file' target='audio' href='";
 		output += "https://stacks.stanford.edu/file/";
 		output += list[i].DRUID.trim();
 		output += "/";
@@ -309,6 +310,7 @@ function MakeRollTableRows(list, peeps) {
 		output += "</a>";
 		output += "</span>";
 		output += "</td>";
+*/
 
 		output += "</tr>";
 	}
