--- a/_includes/scripts/scripts-common.html
+++ b/_includes/scripts/scripts-common.html
@@ -342,6 +342,9 @@ function DisplayPianists(list, selector, peeps) {
 		if (!list[i].PERFORMER) {
 			continue;
 		}
+		if (list[i].PERFORMER === "???") {
+			continue;
+		}
 		performer = list[i].PERFORMER;
 		if (performer === "Adam, Eugenie") {
 			// Spelled in two ways in the list
@@ -506,6 +509,9 @@ function DisplayComposers(list, selector, peeps) {
 		if (!list[i].COMPOSER) {
 			continue;
 		}
+		if (list[i].COMPOSER === "???") {
+			continue;
+		}
 		if (!pianists[list[i].COMPOSER]) {
 			pianists[list[i].COMPOSER] = 0;
 		}
@@ -638,6 +644,9 @@ function DisplayPerformerComposers(list, selector, peeps) {
 	var i;
 	for (i=0; i<list.length; i++) {
 		if (!list[i].COMPOSER) {
+			continue;
+		}
+		if (list[i].COMPOSER === "???") {
 			continue;
 		}
 		if (!list[i].PERFORMER) {
