--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,10 +30,10 @@
             <!-- /logo -->
             <div id="signature">
               <div id="site-name">
-                <a href="/">
-                  <span id="site-name-1">Stanford University Piano Roll Archive</span>
-                  <span id="site-name-2">Optional line 2 - add two-line-signature to body class to display</span>
-                </a>
+			<a name=head>
+                <span style="font-weight:600;" id="site-name-1">Stanford University Piano Roll Archive</span>
+                <div style="white-space:nowrap; padding-left:50px;" id="site-name-2"><span style="font-weight:300;">Research portal | </span><a style="color:#b4a8a8; display:inline;" target="_blank" href="https://exhibits.stanford.edu/supra">Library portal</div>
+			</a>
               </div>
             </div>
           </div>
