Add embedded feedback page.

--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -7,7 +7,6 @@
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
 				<ul class="dropdown-menu">
 					<li><a href="/about">Overview</a></li>
-					<li><a target="_blank" href="https://exhibits.stanford.edu/supra/feature/piano-roll-scanner">Roll scanner</a></li>
 					<li><a href="/midi-spec">MIDI specification</a></li>
 					<li> <a href="/sv">Using with Sonic Visualiser</a> </li>
 					<li><a href="/duplicates">Duplicates</a></li>
@@ -21,7 +20,7 @@
 			<li id="nav-2"> <a href="/performers">Performers</a> </li>
 			<li id="nav-3"> <a href="/composers">Composers</a> </li>
 			<li id="nav-7"> <a target="_blank" href="https://exhibits.stanford.edu/supra">Exhibit</a> </li>
-			<li id="nav-8"> <a target="_blank" href="https://forms.gle/7d94gMcfcAKvThxE6">Feedback</a> </li>
+			<li id="nav-8"> <a href="/feedback">Feedback</a> </li>
 		</ul>
 	</div>
 </div>
