--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
             <div id="signature">
               <div id="site-name">
 			<a name=head>
-                <span style="font-weight:600;" id="site-name-1">Stanford University Piano Roll Archive</span>
-                <div style="white-space:nowrap; padding-left:50px;" id="site-name-2"><span style="font-weight:300;">Research portal | </span><a style="color:#b4a8a8; display:inline;" target="_blank" href="https://exhibits.stanford.edu/supra">Library portal</div>
+                <span style="color:white; font-weight:600;" id="site-name-1">Stanford University Piano Roll Archive</span>
+                <div style="color:white; white-space:nowrap; padding-left:50px;" id="site-name-2"><span style="color:white; font-weight:300;">Research portal | </span><a style="color:#b4a8a8 !important; display:inline;" target="_blank" href="https://exhibits.stanford.edu/supra">Library portal</a></div>
 			</a>
               </div>
             </div>
