Implementation for issue #1.

--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -12,8 +12,7 @@
 					<li><a href="/duplicates">Duplicates</a></li>
 					<li><a href="/stats">Statistics</a></li>
 					<li> <a href="/random">Random</a> </li>
-					<li><a href="/links">Links</a></li>
-					<li><a href="/bib">Bibliography</a></li>
+					<li><a href="/bib">Bibliography/Links</a></li>
 				</ul>
 			</li>
 			<li id="nav-2"> <a href="/download">Downloads</a> </li>
