Adjust links to library resources.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,6 +33,11 @@
 <script src="/scripts/base.js?v=1.0"></script>
 <script src="/scripts/custom.js"></script>
 
+{% if page.vega-lite == true %}
+    <script src="https://cdn.jsdelivr.net/npm/vega@5.4.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@4.0.0-beta.1"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@5"></script>
+{% endif %}
 
 </head>
 
