--- a/_includes/scripts/scripts-common.html
+++ b/_includes/scripts/scripts-common.html
@@ -232,6 +232,22 @@ function MakeRollTableRows(list, peeps) {
 		output += "</td>";
 
 		output += "<td>";
+		output += "<span class='purl'>";
+		output += "<a title='Scan and audio' target='purl' href='/uv/?id=";
+		output += list[i].DRUID;
+		output += "'>UV+</a>";
+		output += "</span>";
+		output += "</td>";
+
+		output += "<td>";
+		output += "<span class='purl'>";
+		output += "<a title='Link to scan' target='purl' href='";
+		output += list[i].PURL;
+		output += "'>SDR</a>";
+		output += "</span>";
+		output += "</td>";
+
+		output += "<td>";
 		output += "<span class='searchworks'>";
 		output += "<a title='SearchWorks: Stanford Libraries card catalog entry' target='searchworks' href='";
 		output += list[i].SEARCHWORKS;
@@ -241,17 +257,13 @@ function MakeRollTableRows(list, peeps) {
 
 		output += "<td>";
 		output += "<span class='purl'>";
-		output += "<a title='Scan in Universal Viewer' target='purl' href='";
-		output += list[i].PURL;
-		output += "'>UV</a>";
-		output += "</span>";
-		output += "</td>";
-
-		output += "<td>";
-		output += "<span class='purl'>";
-		output += "<a title='Scan and audio' target='purl' href='/uv/?id=";
+		output += "<a title='TIFF image of roll, 300 dpi, (green channel), large file' target='purl' href='";
+		output += "https://stacks.stanford.edu/file/";
 		output += list[i].DRUID;
-		output += "'>UV+</a>";
+		output += '/';
+		output += list[i].DRUID;
+		output += "_gr.tiff";
+		output += "'>TIFF</a>";
 		output += "</span>";
 		output += "</td>";
 
