--- a/_includes/scripts/scripts-common.html
+++ b/_includes/scripts/scripts-common.html
@@ -241,7 +241,7 @@ function MakeRollTableRows(list, peeps) {
 
 		output += "<td>";
 		output += "<span class='purl'>";
-		output += "<a title='Link to scan' target='purl' href='";
+		output += "<a title='Stanford Digital Repository entry for roll' target='purl' href='";
 		output += list[i].PURL;
 		output += "'>SDR</a>";
 		output += "</span>";
