Fix URL to TIFF image.

--- a/_includes/scripts/scripts-common.html
+++ b/_includes/scripts/scripts-common.html
@@ -279,7 +279,7 @@ function MakeRollTableRows(list, peeps) {
 		output += list[i].DRUID;
 		output += '/';
 		output += list[i].DRUID;
-		output += "_gr.tiff";
+		output += "_1000_gr.tif";
 		output += "'>TIFF</a>";
 		output += "</span>";
 		output += "</td>";
