Add shift analysis page.

--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -11,6 +11,7 @@
 					<li> <a href="/sv">Using with Sonic Visualiser</a> </li>
 					<li><a href="/duplicates">Duplicates</a></li>
 					<li><a href="/stats">Statistics</a></li>
+					<li><a href="/shifts">Shift analysis</a></li>
 					<li> <a href="/random">Random</a> </li>
 					<li><a href="/bib">Bibliography/Links</a></li>
 				</ul>
