--- a/_includes/scripts/scripts-common.html
+++ b/_includes/scripts/scripts-common.html
@@ -283,18 +283,34 @@ function MakeRollTableRows(list, peeps) {
 		output += "</td>";
 
 		output += "<td>";
-		output += "<span class='drift'>";
-		output += "<a title='drift analysis for roll' target='drift' href='/drift/?druid=";
+		output += "<span class='image-analysis";
+		if (list[i].QUALITY_TAG) {
+			if (list[i].QUALITY_TAG === "0-0-0") {
+				output += " good";
+			} else if (list[i].QUALITY_TAG.match(/\d\d+-\d\d+-\d\d+/)) {
+				output += " verybad";
+			} else if (list[i].QUALITY_TAG.match(/\d\d/)) {
+				output += " bad";
+			}
+		}
+		output +="'>";
+		output += "<a title='image quality analysis for roll";
+		if (list[i].QUALITY_TAG) {
+			output += " (" + list[i].QUALITY_TAG + ")";
+		}
+		output += "' target='searchworks' href='image-analysis/?druid=";
 		output += list[i].DRUID.trim();
-		output += "'>D</a>";
+		output += "'>";
+		output += "IA";
+		output += "</a>";
 		output += "</span>";
 		output += "</td>";
 
 		output += "<td>";
-		output += "<span class='image-analysis'>";
-		output += "<a title='image quality analysis for roll' target='searchworks' href='image-analysis/?druid=";
+		output += "<span class='drift'>";
+		output += "<a title='drift analysis for roll' target='drift' href='/drift/?druid=";
 		output += list[i].DRUID.trim();
-		output += "'>IA</a>";
+		output += "'>D</a>";
 		output += "</span>";
 		output += "</td>";
 
@@ -382,6 +398,48 @@ function MakeRollTableRows(list, peeps) {
 		output += "</tr>";
 	}
 	return output;
+}
+
+
+
+//////////////////////////////
+//
+// BuildQualityTags --
+//
+
+function BuildQualityTags(list) {
+	if (!list) {
+		list = ROLLINFO;
+	}
+	var tag;
+	for (var i=0; i<list.length; i++) {
+		tag = "";
+
+		if (typeof list[i].EDGE_TEAR_COUNT !== "undefined") {
+			tag += list[i].EDGE_TEAR_COUNT.trim();
+		} else {
+			tag += "?";
+		}
+		tag += "-";
+
+		if (typeof list[i].BAD_HOLE_COUNT !== "undefined") {
+			tag += list[i].BAD_HOLE_COUNT.trim();
+		} else {
+			tag += "?";
+		}
+		tag += "-";
+
+		if (typeof list[i].SHIFTS === "string") {
+			tag += list[i].SHIFTS;
+		} else if (Array.isArray(list[i].SHIFTS)) {
+			tag += list[i].SHIFTS[0];
+		} else if (!(typeof list[i].SHIFT === "undefined")) {
+			tag += list[i].SHIFTS;
+		} else {
+			tag += "?";
+		}
+		list[i].QUALITY_TAG = tag;
+	}
 }
 
 
