Add video demo of Sonic Visualiser.

--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -8,7 +8,7 @@
 				<ul class="dropdown-menu">
 					<li><a href="/about">Overview</a></li>
 					<li><a href="/midi-spec">MIDI specification</a></li>
-					<li> <a href="/sv">Using with Sonic Visualiser</a> </li>
+					<li> <a href="/sv">Sonic Visualiser</a> </li>
 					<li><a href="/duplicates">Duplicates</a></li>
 					<li><a href="/stats">Statistics</a></li>
 					<li><a href="/shifts">Shift analysis</a></li>
